--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,10 +7,10 @@
 	<meta id="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
 		name="viewport" />
 	<meta id="referrer" name="referrer" content="always" />
-	<title id="title">夜尽天明的个人博客网站</title>
+	<title id="title">FogBlog</title>
 	<meta name="baidu-site-verification" content="7XGPmF2RtW" />
-	<meta id="keywords" name="keywords" content="夜尽天明 的博客网站，大前端开发" />
-	<meta id="description" name="description" content="夜尽天明 的博客网站。夜尽天明，目前是一名前端开发工程师，全栈修炼 公众号作者，致力于大前端开发、全栈程序员的成长之路。" />
+	<meta id="keywords" name="keywords" content="FogBlog" />
+	<meta id="description" name="description" content="FogBlog" />
 </head>
 
 <body>
